test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_underscore_as_letter_1.draco
proc _() void : _ := _; corp;

proc main() void : a := 0; corp;

