test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_sizeof_as_identifier.draco
int sizeof;
 
proc main() void : a := 1; corp;
